# openapi/openapi.yaml
@@ -15,7 +15,7 @@ servers:
   - url: 'http://localhost:80'
 
 paths:
-  /session/register:
+  /api/session/register:
     post:
       tags:
         - session
@@ -31,7 +31,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Session'
-  /session:
+  /api/session:
     post:
       tags:
         - session
@@ -53,7 +53,7 @@ paths:
       responses:
         '200':
           description: successful operation
-  /user:
+  /api/user:
     post:
       tags:
         - user
@@ -71,7 +71,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-  /user/{userId}:
+  /api/user/{userId}:
     get:
       tags:
         - user
